--- a/deployment_version.yml
+++ b/deployment_version.yml
@@ -1,10 +1,10 @@
 buildversion:
-  version_r4.1:
+  version_r4_1:
     idvui_image_version:
     - 1.2.4
     saa_image_tag:
     - 3.11.0-SNAPSHOT-Build2146
-  version_r4.2:
+  version_r4_2:
     idvui_image_version:
     - 1.2.8
     saa_image_tag:
